Fix for bug #6 on the community website: Loading GML instance data fails; corrected handling and conversion of URIs and URLs.
git-svn-id: http://svn.esdi-humboldt.eu/repo/humboldt2/trunk@1728 5d385326-3dfc-11dd-8f4f-eb0017f4c70c